objects/PMC_DH_Preference_Notification__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Default_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Notification_Sub_Type__c</fullName>
        <label>Notification Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Notification_Type__c</fullName>
        <label>Notification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Preferences__c</fullName>
        <label>Preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Sequence__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PMC DH Preference Notification</label>
    <pluralLabel>PMC DH Preference Notifications</pluralLabel>
</CustomObject>